# mga2

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_INSTRUCTIONS  main.nf  mga.nf  mga2.nf  nextflow.config  processes.nf  workflow.nf
R/: check_inputs.R  summarize_alignments.R
check_inputs/: samples.checked.csv
docker/: Dockerfile  Makefile  conda.yml
resources/: genomes.csv  genomes.example.csv
src/: fastq.rs  lib.rs
src/fastq/: mod.rs
test/: README.md  samplesheet.csv
test/bowtie_indexes/: human.rev.1.ebwt
test/fastq/: sampleA.r2.fq
